fix: swagger response application pdf
