# docs/swagger.json
@@ -470,7 +470,14 @@
                         }
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "file"
+                        }
+                    }
+                }
             }
         },
         "/laporan-perkuliahan/{id-pertemuan}/pertemuan": {
@@ -1549,7 +1556,7 @@
                 "alasan_perubahan": {
                     "type": "string"
                 },
-                "id_jadwal": {
+                "id_jadwal_kuliah": {
                     "type": "integer",
                     "example": 1
                 },
