# models/perubahan_jadwal.go
@@ -48,7 +48,7 @@ type MstJamKuliah struct {
 }
 
 type UpdateJadwalPertemuanRequest struct {
-	IDJadwal           int    `json:"id_jadwal" example:"1"`
+	IDJadwalKuliah     int    `json:"id_jadwal_kuliah" example:"1"`
 	TanggalUsulanGanti string `json:"tanggal_usulan_ganti" example:"2006-01-02 15:04:05"`
 	UsulanMulaiJam     int    `json:"usulan_mulai_jam" example:"1"`
 	UsulanSampaiJam    int    `json:"usulan_sampai_jam" example:"1"`
